# telemsrv

./: .gitignore  CMakeLists.txt  README.md  conf.json  main.cpp
src/: config_loader.cpp  db.cpp  main.cpp
src/config/: config_loader.cpp  config_loader.hpp
src/db/: db.cpp  db.hpp
src/proto/: RecReg.proto
src/server/: wialon_listener.cpp  wialon_listener.hpp
